@@ -1,3 +1,9 @@
+Thu Jul 28 02:15:04 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* ext/dl/cfunc.c (dlcfunc_mark), ext/dl/cptr.c (dlptr_mark):
+	  workaround to mark wrapped object.  this is not a true fix,
+	  because [Bug #4929] is caused by the interface design of DL.
+
 Thu Jul 28 00:28:15 2011  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* test/fileutils/test_fileutils.rb: add OpenBSD case.
